Fixing a small issue with whitespace set to none
when it shouldnt have been

--- a/style.css
+++ b/style.css
@@ -308,6 +308,10 @@ footer {
     }
 
     .page_content_top_bar_button {
+        white-space: normal;
+    }
+
+    .page_content_top_bar_button {
         position: relative;
         z-index: 999;
     }
